feat: cleaning project, add generation of dot file. Coverage of this project is totally non existent :)
